adding wizard for all vendor types

--- a/app/lp_wizard/views/wizard/wizard.html
+++ b/app/lp_wizard/views/wizard/wizard.html
@@ -2,6 +2,26 @@
       <div class="animate-switch" ng-switch-when="VENUE">
       	<div data-ng-include="'lp_wizard/views/venue_wizard/venue_wizard.html'"></div>
       </div>
+      
+      <div class="animate-switch" ng-switch-when="CATERER">
+      	<div data-ng-include="'lp_wizard/views/caterer_wizard/caterer_wizard.html'"></div>
+      </div>
+      
+      <div class="animate-switch" ng-switch-when="DECORATOR">
+      	<div data-ng-include="'lp_wizard/views/decorator_wizard/decorator_wizard.html'"></div>
+      </div>
+      
+      <div class="animate-switch" ng-switch-when="PHOTOGRAPHER">
+      	<div data-ng-include="'lp_wizard/views/photographer_wizard/photographer_wizard.html'"></div>
+      </div>
+      
+      <div class="animate-switch" ng-switch-when="ENTERTAINMENT">
+      	<div data-ng-include="'lp_wizard/views/entertainment_wizard/entertainment_wizard.html'"></div>
+      </div>
+      
+      <div class="animate-switch" ng-switch-when="OTHERS">
+      	<div data-ng-include="'lp_wizard/views/others_wizard/others_wizard.html'"></div>
+      </div>
 
       <div class="animate-switch" ng-switch-default>
       	<div data-ng-include="'lp_wizard/views/venue_wizard/venue_wizard.html'"></div>
