--- a/app/lp_wizard/views/caterer_wizard/caterer_wizard.html
+++ b/app/lp_wizard/views/caterer_wizard/caterer_wizard.html
@@ -253,7 +253,7 @@
       				
       				<!-- For Image Uploading -->
       				<div layout="column" layout-wrap>
-        	<h2 class="md-title" style="margin-left: 16px;">Upload Venue Images</h2>
+        	<h2 class="md-title" style="margin-left: 16px;">Upload Vendor Images</h2>
         	<div layout="row" layout-wrap layout-margin layout-align="start center">
         	<div flex="100">
         		<span class="validation-err-msg" ng-show="vm.policyDetailsForm.vendorImageFile.$error.maxSize">File too large, one image file can be of maximum 256KB</span>
